[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/components/altar/textures/statue/statue5.png" type="Texture" id=1]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere1.png" type="Texture" id=2]
[ext_resource path="res://scenes/components/altar/textures/statue/statue2.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere2.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere3.png" type="Texture" id=5]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere4.png" type="Texture" id=6]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere5.png" type="Texture" id=7]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere2.png" type="Texture" id=8]
[ext_resource path="res://scenes/components/altar/textures/statue/statue4.png" type="Texture" id=9]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere1.png" type="Texture" id=10]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere5.png" type="Texture" id=11]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere4.png" type="Texture" id=12]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere3.png" type="Texture" id=13]
[ext_resource path="res://scenes/components/altar/textures/statue/statue3.png" type="Texture" id=14]
[ext_resource path="res://scenes/components/altar/textures/statue/statue1.png" type="Texture" id=15]
[ext_resource path="res://scenes/components/altar/AltarContainer.gd" type="Script" id=16]
[ext_resource path="res://scenes/components/altar/AltarSphere.gd" type="Script" id=17]
[ext_resource path="res://scenes/components/altar/Altar.gd" type="Script" id=18]
[ext_resource path="res://scenes/components/save_point/SavePoint.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/components/altar/audio/collect.wav" type="AudioStream" id=23]
[ext_resource path="res://scenes/components/altar/audio/bury.wav" type="AudioStream" id=24]
[ext_resource path="res://scenes/components/altar/audio/magic.ogg" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 4 ) ],
"loop": true,
"name": "ray",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "shield",
"speed": 3.0
} ]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sphere:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sphere:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "collect"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sphere:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ), Vector2( 1, 26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sphere:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 3 ) ],
"loop": true,
"name": "glow",
"speed": 3.0
} ]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Altar/Statue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Altar/Statue:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -2.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "hiding"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Altar/Statue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Altar/Statue:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ 0.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AltarSphere:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -55 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "soaring"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5, 6 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AltarSphere:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 4, 5.5 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -55 ), Vector2( 0, -65 ), Vector2( 0, -55 ) ]
}

[node name="AltarContainer" type="Node2D"]
script = ExtResource( 16 )
__meta__ = {
"_editor_description_": "Первым будет выдан щит, потом луч."
}

[node name="SavePoint" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, -138 )
scale = Vector2( 1, 0.045 )
z_index = 4

[node name="AltarSphere" type="Area2D" parent="."]
position = Vector2( 0, -55 )
scale = Vector2( 3, 3 )
collision_layer = 268435456
collision_mask = 0
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Collision" type="CollisionPolygon2D" parent="AltarSphere"]
visible = false
position = Vector2( 0.666667, -23.9999 )
polygon = PoolVector2Array( -8, -3, -8, 10.3333, 0, 13, 8, 10.3333, 8, -3, 0, -5.66667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sphere" type="AnimatedSprite" parent="AltarSphere"]
position = Vector2( 0, -24 )
z_index = 1
frames = SubResource( 6 )
animation = "ray"
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Collect" type="AnimationPlayer" parent="AltarSphere"]
anims/RESET = SubResource( 11 )
anims/collect = SubResource( 12 )

[node name="Altar" type="Area2D" parent="."]
scale = Vector2( 3, 3 )
collision_layer = 4194304
collision_mask = 0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Collision" type="CollisionPolygon2D" parent="Altar"]
visible = false
polygon = PoolVector2Array( -8, -29.3333, -16, -16, -16, 18.6667, 18.6667, 18.6667, 18.6667, -16, 10.6667, -29.3333 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Останавливает луч."
}

[node name="Statue" type="AnimatedSprite" parent="Altar"]
rotation = -0.0349066
frames = SubResource( 7 )
animation = "glow"
offset = Vector2( 0, -42 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hiding" type="AnimationPlayer" parent="Altar"]
root_node = NodePath("../../AltarSphere")
anims/RESET = SubResource( 14 )
anims/hiding = SubResource( 13 )

[node name="Magic" type="AudioStreamPlayer2D" parent="Altar"]
scale = Vector2( 0.333333, 0.333333 )
stream = ExtResource( 25 )
volume_db = -5.0
pitch_scale = 0.4
max_distance = 1000.0
bus = "Effects"
__meta__ = {
"_edit_lock_": true
}

[node name="Delay" type="Timer" parent="Altar/Magic"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Collect" type="AudioStreamPlayer2D" parent="Altar"]
scale = Vector2( 0.333333, 0.333333 )
stream = ExtResource( 23 )
volume_db = 1.0
pitch_scale = 0.1
max_distance = 1000.0
bus = "Effects"
__meta__ = {
"_edit_lock_": true
}

[node name="Bury" type="AudioStreamPlayer2D" parent="Altar"]
scale = Vector2( 0.333333, 0.333333 )
stream = ExtResource( 24 )
pitch_scale = 0.9
max_distance = 1500.0
bus = "Effects"
__meta__ = {
"_edit_lock_": true
}

[node name="Soaring" type="AnimationPlayer" parent="."]
root_node = NodePath("../Altar")
autoplay = "soaring"
anims/RESET = SubResource( 10 )
anims/soaring = SubResource( 9 )

[connection signal="animation_finished" from="AltarSphere/Collect" to="." method="_on_Collect_animation_finished"]
[connection signal="animation_finished" from="Altar/Hiding" to="." method="_on_Hiding_animation_finished"]
[connection signal="timeout" from="Altar/Magic/Delay" to="Altar" method="_on_Magic_Delay_timeout"]
